--- a/src/app/view/cadastrar/cadastrar.page.html
+++ b/src/app/view/cadastrar/cadastrar.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home" text=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Cadastrar Novo Jogo</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,15 +10,27 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-input label="Nome" placeholder="Insira o nome do Jogo" [(ngModel)]="nome"></ion-input>
+      <ion-input
+        label="Nome:"
+        placeholder="Insira o nome do Jogo"
+        [(ngModel)]="nome"
+      ></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Descricao" placeholder="Insira a Descricao do Jogo" [(ngModel)]="descricao"></ion-input>
+      <ion-input
+        label="Descrição:"
+        placeholder="Insira a Descricao do Jogo"
+        [(ngModel)]="descricao"
+      ></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-select label="Gemero" placeholder="Selecione o Genero" [(ngModel)]="genero">
+      <ion-select
+        label="Gênero:"
+        placeholder="Selecione o Genero"
+        [(ngModel)]="genero"
+      >
         <ion-select-option value="ACAO">Acao</ion-select-option>
         <ion-select-option value="TERROR">Terror</ion-select-option>
         <ion-select-option value="TIRO">Tiro</ion-select-option>
@@ -25,14 +40,24 @@
     </ion-item>
 
     <ion-item>
-      <ion-input label="Avaliacao" placeholder="Insira a Nota do Jogo" [(ngModel)]="avaliacao" type="number"></ion-input>
+      <ion-input
+        label="Avaliação:"
+        placeholder="Insira a Nota do Jogo"
+        [(ngModel)]="avaliacao"
+        type="number"
+      ></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Preco" placeholder="Insira o preco do Jogo" [(ngModel)]="preco" type="number"></ion-input>
+      <ion-input
+        label="Preço:"
+        placeholder="Insira o preco do Jogo"
+        [(ngModel)]="preco"
+        type="number"
+      ></ion-input>
     </ion-item>
-
-    <ion-button expand="block" (click)="cadastrar()">Cadastrar</ion-button>
-
-  <ion-list>
+  </ion-list>
+  <ion-button expand="block" (click)="cadastrar()"
+    >Cadastrar <ion-icon name="game-controller-outline"></ion-icon>
+  </ion-button>
 </ion-content>
