--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -1,21 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Lista de Jogos
-    </ion-title>
+    <ion-title> Lista de Jogos </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list *ngFor="let jogo of lista_jogos;">
     <ion-item (click)="editar(jogo)">
-      <ion-label>{{jogo.nome}}</ion-label>
+      <ion-label>
+        <strong>{{jogo.nome}}</strong><br />
+        <span class="info-jogo">Gênero: {{[jogo.genero]}}</span> <br />
+        <span class="info-jogo">Avaliação: {{jogo.avaliacao}}</span><br />
+        <span class="info-jogo">Preço: {{jogo.preco}}</span>
+      </ion-label>
     </ion-item>
   </ion-list>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button color="tertiary" (click)="irParaCadastrar()">
-      <ion-icon name="game-controller-outline"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <button class="access-button" (click)="irParaCadastrar()">
+    Adicionar Jogo<ion-icon name="game-controller-outline"></ion-icon> 
+  </button>
 </ion-content>
