--- a/src/app/view/detalhar/detalhar.page.scss
+++ b/src/app/view/detalhar/detalhar.page.scss
@@ -68,7 +68,7 @@
     font-size: 1rem;
 
     &.ion-color-sucess {
-      --background: dodgerblue;
+      --background: linear-gradient(indigo, dodgerblue);
       --color: yellow;
     }
 
