--- a/src/app/view/cadastrar/cadastrar.page.scss
+++ b/src/app/view/cadastrar/cadastrar.page.scss
@@ -34,17 +34,17 @@
     border-radius: 20px;
     margin-top: 10px;
     margin-bottom: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
     box-shadow: none;
     border: none;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   ion-label,
   ion-input,
   ion-select {
     font-family: "Press Start 2P", cursive;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     flex: none;
     color: rgba(255, 255, 0, 1);
     width: 100%;
@@ -53,7 +53,7 @@
 
   ion-title {
     font-family: "Press Start 2P";
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     color: yellow;
   }
 
@@ -67,6 +67,11 @@
 
     --background: dodgerblue;
     --color: yellow;
+  }
+  .addImagem{
+    color: yellow;
+    font-family: "Press Start 2P", cursive;
+    width: 50%;
   }
 
   ion-back-button {
