--- a/src/app/view/cadastrar/cadastrar.page.html
+++ b/src/app/view/cadastrar/cadastrar.page.html
@@ -10,27 +10,15 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-input
-        label="Nome:"
-        placeholder="Insira o nome do Jogo"
-        [(ngModel)]="nome"
-      ></ion-input>
+      <ion-input label="Nome:" placeholder="Insira o nome do jogo" [(ngModel)]="nome"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input
-        label="Descrição:"
-        placeholder="Insira a Descricao do Jogo"
-        [(ngModel)]="descricao"
-      ></ion-input>
+      <ion-input label="Plataforma:" placeholder="Insira a plataforma" [(ngModel)]="plataforma"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-select
-        label="Gênero:"
-        placeholder="Selecione o Genero"
-        [(ngModel)]="genero"
-      >
+      <ion-select label="Gênero:" placeholder="Selecione" [(ngModel)]="genero">
         <ion-select-option value="ACAO">Acao</ion-select-option>
         <ion-select-option value="TERROR">Terror</ion-select-option>
         <ion-select-option value="TIRO">Tiro</ion-select-option>
@@ -40,24 +28,21 @@
     </ion-item>
 
     <ion-item>
-      <ion-input
-        label="Avaliação:"
-        placeholder="Insira a Nota do Jogo"
-        [(ngModel)]="avaliacao"
-        type="number"
-      ></ion-input>
+      <ion-input label="Avaliação:" placeholder="Insira a nota do jogo" [(ngModel)]="avaliacao"
+        type="number"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input
-        label="Preço:"
-        placeholder="Insira o preco do Jogo"
-        [(ngModel)]="preco"
-        type="number"
-      ></ion-input>
+      <ion-input label="Preço:" placeholder="Insira o preço do jogo" [(ngModel)]="preco" type="number"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label>Imagem:</ion-label>
+      <ion-button class="addImagem" slot="end">
+        <input type="file" (change)="uploadFile($event.target)"/>
+      </ion-button>
+    </ion-item>
+
   </ion-list>
-  <ion-button expand="block" (click)="cadastrar()"
-    >Cadastrar <ion-icon name="game-controller-outline"></ion-icon>
+  <ion-button expand="block" (click)="cadastrar()">Cadastrar <ion-icon name="game-controller-outline"></ion-icon>
   </ion-button>
 </ion-content>
