--- a/src/app/view/detalhar/detalhar.page.scss
+++ b/src/app/view/detalhar/detalhar.page.scss
@@ -32,13 +32,12 @@
     --background: transparent;
     background-color: indigo;
     border-radius: 20px;
-    margin-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    box-shadow: none;
-    border: none;
     margin-top: 10px;
     margin-bottom: 5px;
+    box-shadow: none;
+    border: none;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   ion-label,
@@ -46,7 +45,7 @@
   ion-select,
   ion-toggle {
     font-family: "Press Start 2P", cursive;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     flex: none;
     color: rgba(255, 255, 0, 1);
     width: 100%;
@@ -59,7 +58,7 @@
     color: yellow;
   }
 
-  ion-button[expand="block"] {
+  ion-button {  
     display: block;
     width: 80%;
     margin: 20px auto;
@@ -67,16 +66,15 @@
     font-family: "Press Start 2P", cursive;
     font-size: 1rem;
 
-    &.ion-color-sucess {
-      --background: linear-gradient(indigo, dodgerblue);
-      --color: yellow;
-    }
-
-    &.ion-color-danger {
-      --background: red;
-      --color: yellow;
-    }
   }
+
+  .addImagem {
+    color: yellow;
+    font-family: "Press Start 2P", cursive;
+    width: 50%;
+    font-size: 0.5rem;
+  }
+
   ion-back-button {
     --color: yellow;
   }
