--- a/src/app/view/home/home.page.scss
+++ b/src/app/view/home/home.page.scss
@@ -28,11 +28,6 @@
     background-color: indigo;
     border-radius: 20px;
     margin-bottom: 10px;
-    //padding-left: 20px; // Dá um espaçamento interno à esquerda
-    //padding-right: 20px; // Dá um espaçamento interno à direita
-
-    // Tentativa de corrigir problemas visuais
-    //box-shadow: none;
     border: none;
     margin-top: 10px;
     margin-bottom: 5px;
@@ -69,20 +64,6 @@
     color: yellow;
   }
 
-  /*.access-button {
-    display: block;
-    width: 80%; /* Faz o botão ocupar 80% da largura da tela //
-    margin: 20px auto; // Centraliza o botão horizontalmente e adiciona margem em cima e embaixo //
-    padding: 10px 0;
-    text-align: center;
-    background: dodgerblue;
-    border-radius: 20px;
-    color: yellow;
-    font-family: "Press Start 2P", cursive;
-    border: none; // Remove qualquer borda padrão do botão //
-    font-size: 1rem;
-  }*/
-
   ion-button {
     display: block;
     width: 80%;
@@ -118,5 +99,17 @@
   ion-icon {
     font-size: 25px;
     margin-left: 10px;
+  }
+
+  ion-avatar {
+    --border-radius: 15px;
+    width: 70px;
+    height: 70px;
+  }
+
+  ion-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
