Correção Autoprefixer plugin

--- a/src/app/view/detalhar/detalhar.page.scss
+++ b/src/app/view/detalhar/detalhar.page.scss
@@ -18,7 +18,7 @@
     border-radius: 20px 20px 0 0;
     text-align: left; // para alinhar o título à esquerda
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
 
