Autenticação, signin, signup  e login com google implementados

--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -23,6 +23,13 @@
   </ion-list>
 
   <ion-button (click)="irParaCadastrar()">
-    Adicionar Jogo<ion-icon name="game-controller-outline"></ion-icon>
+    Adicionar Jogo<ion-icon class="game-icon"  name="game-controller-outline"></ion-icon>
   </ion-button>
+
+  <ion-fab horizontal="start" vertical="bottom">
+    <ion-fab-button (click)="logout()" color="danger">
+      <ion-icon name="log-out-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
 </ion-content>
