--- a/src/app/view/home/home.page.scss
+++ b/src/app/view/home/home.page.scss
@@ -45,15 +45,6 @@
     line-height: 1.5em;
   }
 
-  ion-fab {
-    position: absolute;
-    width: 100%;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    justify-content: center;
-  }
-
   ion-fab-button {
     --background: linear-gradient(
       to right,
@@ -96,7 +87,7 @@
     color: rgba(255, 255, 0, 0.6); // Cor amarela com 60% de opacidade
   }
 
-  ion-icon {
+  .game-icon{
     font-size: 25px;
     margin-left: 10px;
   }
