--- a/src/app/view/usuarios/signin/signin.page.html
+++ b/src/app/view/usuarios/signin/signin.page.html
@@ -29,6 +29,9 @@
       <ion-button expand="full" color="danger"
       (click)="logarComGoogle()">Entrar com google <ion-icon slot="end" name="logo-google"></ion-icon>
     </ion-button>
+    <ion-button expand="full" color="danger"
+      (click)="logarComGitHub()">Entrar com Git <ion-icon slot="end" name="logo-github"></ion-icon>
+    </ion-button>
     <a (click)="irParaSignUp()">Não tem cadastro? Clique aqui!</a>
     </form>
 </ion-content>
