--- a/src/app/view/usuarios/signin/signin.page.html
+++ b/src/app/view/usuarios/signin/signin.page.html
@@ -4,31 +4,30 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> 
-    <form [formGroup]="formLogar" (ngSubmit)="submitForm()">
-      <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input type="email" formControlName="email"></ion-input>
-      </ion-item>
-      <!-- Mensagem de erro de email -->
-      <span *ngIf="formLogar.get('email')?.touched && 
-      formLogar.get('email')?.errors?.['required']">Email é obrigatório</span><br/>
-      <span *ngIf="formLogar.get('email')?.dirty && 
+<ion-content>
+  <form [formGroup]="formLogar" (ngSubmit)="submitForm()">
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email" formControlName="email"></ion-input>
+    </ion-item>
+    <!-- Mensagem de erro de email -->
+    <span *ngIf="formLogar.get('email')?.touched && 
+      formLogar.get('email')?.errors?.['required']">Email é obrigatório</span><br />
+    <span *ngIf="formLogar.get('email')?.dirty && 
       formLogar.get('email')?.errors?.['email']">Formato de email inválido</span>
-      <ion-item>
-        <ion-label position="floating">Senha</ion-label>
-        <ion-input type="password" formControlName="senha"></ion-input>
-      </ion-item>
-      <!-- Mensagem de erro senha -->
-      <span *ngIf="formLogar.get('senha')?.touched && 
-      formLogar.get('senha')?.errors?.['required']">Senha é obrigatório</span><br/>
-      <span *ngIf="formLogar.get('senha')?.dirty && 
+    <ion-item>
+      <ion-label position="floating">Senha</ion-label>
+      <ion-input type="password" formControlName="senha"></ion-input>
+    </ion-item>
+    <!-- Mensagem de erro senha -->
+    <span *ngIf="formLogar.get('senha')?.touched && 
+      formLogar.get('senha')?.errors?.['required']">Senha é obrigatório</span><br />
+    <span *ngIf="formLogar.get('senha')?.dirty && 
       formLogar.get('senha')?.errors?.['minlength']">Senha precisa de no mínimo 6 caracteres</span>
-      <ion-button expand="full" color="success"
-      type="submit">Entrar</ion-button>
-      <ion-button expand="full" color="danger"
-      (click)="logarComGoogle()">Entrar com google <ion-icon slot="end" name="logo-google"></ion-icon>
+    <ion-button expand="block" color="success" type="submit">Entrar</ion-button>
+    <ion-button expand="block" color="danger" (click)="logarComGoogle()">Entrar com google <ion-icon slot="end"
+        name="logo-google"></ion-icon>
     </ion-button>
     <a (click)="irParaSignUp()">Não tem cadastro? Clique aqui!</a>
-    </form>
+  </form>
 </ion-content>
