Estilização das páginas concluída

--- a/src/app/view/cadastrar/cadastrar.page.html
+++ b/src/app/view/cadastrar/cadastrar.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home" text=""></ion-back-button>
     </ion-buttons>
-    <ion-title>Cadastrar Novo Jogo</ion-title>
+    <ion-title>Cadastrar jogo</ion-title>
   </ion-toolbar>
 </ion-header>
 
