--- a/src/app/view/detalhar/detalhar.page.html
+++ b/src/app/view/detalhar/detalhar.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home" text=""></ion-back-button>
     </ion-buttons>
-    <ion-title>Detalhes do Jogo</ion-title>
+    <ion-title>Detalhes do jogo</ion-title>
   </ion-toolbar>
 </ion-header>
 
