--- a/src/app/view/detalhar/detalhar.page.scss
+++ b/src/app/view/detalhar/detalhar.page.scss
@@ -24,7 +24,6 @@
 
   ion-list {
     background: transparent;
-    margin-top: 10px;
   }
 
   ion-item {
@@ -56,6 +55,7 @@
     font-family: "Press Start 2P";
     font-size: 0.7em;
     color: yellow;
+    padding-inline: 0;
   }
 
   ion-button {
