--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -23,7 +23,7 @@
   </ion-list>
 
   <ion-button (click)="irParaCadastrar()">
-    Adicionar Jogo<ion-icon class="game-icon"  name="game-controller-outline"></ion-icon>
+    Adicionar <ion-icon class="game-icon"  name="game-controller-outline"></ion-icon>
   </ion-button>
 
   <ion-fab horizontal="start" vertical="bottom">
