--- a/src/app/view/usuarios/signin/signin.page.html
+++ b/src/app/view/usuarios/signin/signin.page.html
@@ -11,26 +11,26 @@
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
     <!-- Mensagem de erro de email -->
-    <span *ngIf="formLogar.get('email')?.touched && 
-      formLogar.get('email')?.errors?.['required']">Email é obrigatório</span><br />
-    <span *ngIf="formLogar.get('email')?.dirty && 
+    <span class="error-message" *ngIf="formLogar.get('email')?.touched && 
+      formLogar.get('email')?.errors?.['required']">Email é obrigatório</span>
+    <span class="error-message" *ngIf="formLogar.get('email')?.dirty && 
       formLogar.get('email')?.errors?.['email']">Formato de email inválido</span>
     <ion-item>
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="senha"></ion-input>
     </ion-item>
     <!-- Mensagem de erro senha -->
-    <span *ngIf="formLogar.get('senha')?.touched && 
-      formLogar.get('senha')?.errors?.['required']">Senha é obrigatório</span><br />
-    <span *ngIf="formLogar.get('senha')?.dirty && 
-      formLogar.get('senha')?.errors?.['minlength']">Senha precisa de no mínimo 6 caracteres</span>
+    <span class="error-message" *ngIf="formLogar.get('senha')?.touched && 
+      formLogar.get('senha')?.errors?.['required']">Senha é obrigatório</span>
+    <div class="error-message" *ngIf="formLogar.get('senha')?.dirty && 
+      formLogar.get('senha')?.errors?.['minlength']">Senha precisa de no mínimo 6 caracteres</div>
     <ion-button expand="block" color="success" type="submit">Entrar</ion-button>
-    <ion-button expand="block" color="danger" (click)="logarComGoogle()">Entrar com google <ion-icon slot="end"
+    <ion-button expand="block" color="danger" (click)="logarComGoogle()">Entrar com Google <ion-icon slot="end"
         name="logo-google"></ion-icon>
     </ion-button>
-    <ion-button expand="full" color="danger"
+    <ion-button expand="block" color="dark"
       (click)="logarComGitHub()">Entrar com Git <ion-icon slot="end" name="logo-github"></ion-icon>
     </ion-button>
-    <a (click)="irParaSignUp()">Não tem cadastro? Clique aqui!</a>
+    <a class="signup-link" (click)="irParaSignUp()">Não tem cadastro? Clique aqui!</a>
   </form>
 </ion-content>
