--- a/src/app/view/usuarios/signup/signup.page.html
+++ b/src/app/view/usuarios/signup/signup.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button color="yellow" defaultHref="/signin" text=""></ion-back-button>
+    </ion-buttons>
     <ion-title>Cadastrar</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,52 +14,32 @@
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
     <!-- Mensagem de erro de email -->
-    <span
-      *ngIf="formCadastrar.get('email')?.touched && 
-      formCadastrar.get('email')?.errors?.['required']"
-      >Email é obrigatório</span
-    ><br />
-    <span
-      *ngIf="formCadastrar.get('email')?.dirty && 
-      formCadastrar.get('email')?.errors?.['email']"
-      >Formato de email inválido</span
-    >
+    <span class="error-message" *ngIf="formCadastrar.get('email')?.touched && 
+      formCadastrar.get('email')?.errors?.['required']">Email é obrigatório</span>
+    <span class="error-message" *ngIf="formCadastrar.get('email')?.dirty && 
+      formCadastrar.get('email')?.errors?.['email']">Formato de email inválido</span>
     <ion-item>
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="senha"></ion-input>
     </ion-item>
 
     <!-- Mensagem de erro senha -->
-    <span
-      *ngIf="formCadastrar.get('senha')?.touched && 
-      formCadastrar.get('senha')?.errors?.['required']"
-      >Senha é obrigatório</span
-    ><br />
-    <span
-      *ngIf="formCadastrar.get('senha')?.dirty && 
-      formCadastrar.get('senha')?.errors?.['minlength']"
-      >Senha precisa de no mínimo 6 caracteres</span
-    >
+    <span class="error-message" *ngIf="formCadastrar.get('senha')?.touched && 
+      formCadastrar.get('senha')?.errors?.['required']">Senha é obrigatório</span>
+    <div class="error-message" *ngIf="formCadastrar.get('senha')?.dirty && 
+      formCadastrar.get('senha')?.errors?.['minlength']">Senha precisa de no mínimo 6 caracteres</div>
     <ion-item>
       <ion-label position="floating">Confirmação de senha</ion-label>
       <ion-input type="password" formControlName="confSenha"></ion-input>
     </ion-item>
-    <span
-      *ngIf="formCadastrar.get('confSenha')?.touched && 
-      formCadastrar.get('confSenha')?.errors?.['required']"
-      >Confirmar senha</span
-    ><br />
-    <span
-      *ngIf="formCadastrar.get('confSenha')?.dirty && 
-    formCadastrar.get('confSenha')?.errors?.['minlength']"
-      >A confirmação de senha é obrigatório</span
-    ><br />
-    <span
-      *ngIf="formCadastrar.get('confSenha')?.dirty && (this.formCadastrar.get('senha')?.value != this.formCadastrar.get('confSenha')?.value)"
-      >As senhas precisam ser iguais
-    </span>
-    <ion-button expand="full" color="success" type="submit"
-      >Cadastrar</ion-button
-    >
+    <span class="error-message" *ngIf="formCadastrar.get('confSenha')?.touched && 
+      formCadastrar.get('confSenha')?.errors?.['required']">Confirmar senha</span>
+    <div class="error-message" *ngIf="formCadastrar.get('confSenha')?.dirty && 
+    formCadastrar.get('confSenha')?.errors?.['minlength']">A confirmação de senha é obrigatório</div>
+    <div class="error-message"
+      *ngIf="formCadastrar.get('confSenha')?.dirty && (this.formCadastrar.get('senha')?.value != this.formCadastrar.get('confSenha')?.value)">As
+      senhas precisam ser iguais
+    </div>
+    <ion-button expand="block" color="success" type="submit">Cadastrar</ion-button>
   </form>
 </ion-content>
