Detalhes de estilização corrigidos

--- a/src/app/view/usuarios/signup/signup.page.html
+++ b/src/app/view/usuarios/signup/signup.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button color="yellow" defaultHref="/signin" text=""></ion-back-button>
+      <ion-back-button defaultHref="/signin" text=""></ion-back-button>
     </ion-buttons>
     <ion-title>Cadastrar</ion-title>
   </ion-toolbar>
