--- a/src/app/view/usuarios/signup/signup.page.scss
+++ b/src/app/view/usuarios/signup/signup.page.scss
@@ -1,16 +1,9 @@
 :host {
   font-family: "Press Start 2P", cursive;
 
-  ion-header {
-    font-family: "Press Start 2P", cursive;
-    font-size: 1em;
-    text-align: left;
-  }
-
   ion-content {
     --background: #002240; // Cor azul petróleo
     font-family: "Press Start 2P", cursive; // Fonte retro pixel
-    color: yellow; // Cor amarela para todo o texto
   }
 
   ion-toolbar {
@@ -59,6 +52,10 @@
     border-radius: 20px;
     font-family: "Press Start 2P", cursive;
     font-size: 0.8rem;
+  }
+
+  ion-back-button {
+    --color: yellow;
   }
 
   .error-message {
