Alterações para formulário reativo ao cadastrar jogo

--- a/src/app/view/cadastrar/cadastrar.page.scss
+++ b/src/app/view/cadastrar/cadastrar.page.scss
@@ -72,4 +72,11 @@
     font-size: 25px;
     margin-left: 10px;
   }
+
+  .error-message {
+    margin-top: 10px;
+    color: red;
+    margin-left: 15px;
+    font-size: 0.7rem;
+  }
 }
