Erros gramaticais corrigidos

--- a/src/app/view/cadastrar/cadastrar.page.html
+++ b/src/app/view/cadastrar/cadastrar.page.html
@@ -27,7 +27,7 @@
       <ion-item>
         <ion-label>Gênero</ion-label>
         <ion-select formControlName="genero" placeholder="Selecione">
-          <ion-select-option value="ACAO">Acao</ion-select-option>
+          <ion-select-option value="ACAO">Ação</ion-select-option>
           <ion-select-option value="TERROR">Terror</ion-select-option>
           <ion-select-option value="TIRO">Tiro</ion-select-option>
           <ion-select-option value="RPG">Rpg</ion-select-option>
