Otimizações do front

--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -23,13 +23,15 @@
   </ion-list>
 
   <ion-button (click)="irParaCadastrar()">
-    Adicionar <ion-icon class="game-icon"  name="game-controller-outline"></ion-icon>
+    Adicionar <ion-icon class="game-icon" name="game-controller-outline"></ion-icon>
   </ion-button>
 
+</ion-content>
+
+<ion-footer>
   <ion-fab horizontal="start" vertical="bottom">
     <ion-fab-button (click)="logout()" color="danger">
       <ion-icon name="log-out-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  
-</ion-content>
+</ion-footer>
