--- a/src/app/view/home/home.page.scss
+++ b/src/app/view/home/home.page.scss
@@ -20,8 +20,7 @@
     border-radius: 20px;
     margin-bottom: 10px;
     border: none;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 5px;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -52,14 +51,13 @@
     margin: 20px auto;
     border-radius: 20px;
     font-family: "Press Start 2P", cursive;
-
     --background: dodgerblue;
     --color: yellow;
   }
 
   ion-list {
     background: transparent;
-    margin-top: 10px;
+    //margin-top: 10px;
   }
 
   ion-title {
