--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -22,16 +22,23 @@
     </ion-item>
   </ion-list>
 
-  <ion-button (click)="irParaCadastrar()">
+  <!-- <ion-button (click)="irParaCadastrar()">
     Adicionar <ion-icon class="game-icon" name="game-controller-outline"></ion-icon>
-  </ion-button>
+  </ion-button> -->
 
 </ion-content>
 
 <ion-footer>
   <ion-fab horizontal="start" vertical="bottom">
     <ion-fab-button (click)="logout()" color="danger">
-      <ion-icon name="log-out-outline"></ion-icon>
+      <ion-icon name="log-out-sharp"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-fab horizontal="end" vertical="bottom">
+    <ion-fab-button class="add-game" (click)="irParaCadastrar()">
+      <ion-icon class="game-icon" name="game-controller-sharp">></ion-icon>
+      <ion-icon class="add-icon" name="add-circle-sharp"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-footer>
