--- a/src/app/view/cadastrar/cadastrar.page.scss
+++ b/src/app/view/cadastrar/cadastrar.page.scss
@@ -72,10 +72,12 @@
     margin-left: 10px;
   }
 
-  .error-message {
+  .error-message{
+    font-family: "Press Start 2P", cursive;
     margin-top: 10px;
-    color: red;
-    margin-left: 15px;
-    font-size: 0.7rem;
+    color: rgb(204, 5, 5);
+    margin-left: 25px;
+    margin-right: 25px;
+    font-size: x-small;
   }
 }
