--- a/src/app/view/detalhar/detalhar.page.html
+++ b/src/app/view/detalhar/detalhar.page.html
@@ -8,51 +8,87 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-toggle (ionChange)="habilitarEdicao()">Habilitar Edição</ion-toggle>
-    </ion-item>
-    <ion-item>
-      <ion-input label="Nome:" placeholder="Insira o nome do jogo" [(ngModel)]="nome" disabled="{{edicao}}"></ion-input>
-    </ion-item>
+  <form [formGroup]="formDetalhes" (ngSubmit)="editar()">
+    <ion-list>
 
-    <ion-item>
-      <ion-input label="Plataforma:" placeholder="Insira a plataforma" [(ngModel)]="plataforma"
-        disabled="{{edicao}}"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-toggle (ionChange)="habilitarEdicao()">Habilitar Edição</ion-toggle>
+      </ion-item>
 
-    <ion-item>
-      <ion-select label="Gênero:" placeholder="Selecione" [(ngModel)]="genero" disabled="{{edicao}}">
-        <ion-select-option value="ACAO">Acao</ion-select-option>
-        <ion-select-option value="TERROR">Terror</ion-select-option>
-        <ion-select-option value="TIRO">Tiro</ion-select-option>
-        <ion-select-option value="RPG">Rpg</ion-select-option>
-        <ion-select-option value="AVENTURA">Aventura</ion-select-option>
-      </ion-select>
-    </ion-item>
+      <ion-item disabled="{{edicao}}">
+        <ion-input label="Nome:" placeholder="Insira o nome do jogo" formControlName="nome"></ion-input>
+      </ion-item>
+      <div *ngIf="formDetalhes.get('nome')?.touched && formDetalhes.get('nome')?.errors?.['required']"
+        class="error-message">
+        Nome é obrigatório
+      </div>
 
-    <ion-item>
-      <ion-input label="Avaliação:" placeholder="Insira a nota do jogo" [(ngModel)]="avaliacao" type="number"
-        disabled="{{edicao}}"></ion-input>
-    </ion-item>
+      <ion-item disabled="{{edicao}}">
+        <ion-input label="Plataforma:" placeholder="Insira a plataforma" formControlName="plataforma"></ion-input>
+      </ion-item>
+      <div *ngIf="formDetalhes.get('plataforma')?.touched && formDetalhes.get('plataforma')?.errors?.['required']"
+        class="error-message">
+        Plataforma é obrigatória
+      </div>
 
-    <ion-item>
-      <ion-input label="Preço:" placeholder="Insira o preço do jogo" [(ngModel)]="preco" type="number"
-        disabled="{{edicao}}"></ion-input>
-    </ion-item>
-    <ion-item *ngIf="jogo.downloadURL != null">
-      <img src="{{jogo.downloadURL}}" />
-    </ion-item>
-    <ion-item disabled="{{edicao}}">
-      <ion-label>Imagem:</ion-label>
-      <ion-button class="addImagem" slot="end">
-        <input type="file" (change)="uploadFile($event.target)" />
-      </ion-button>
-    </ion-item>
+      <ion-item disabled="{{edicao}}">
+        <ion-select label="Gênero:" placeholder="Selecione" formControlName="genero">
+          <ion-select-option value="ACAO">Ação</ion-select-option>
+          <ion-select-option value="TERROR">Terror</ion-select-option>
+          <ion-select-option value="TIRO">Tiro</ion-select-option>
+          <ion-select-option value="RPG">RPG</ion-select-option>
+          <ion-select-option value="AVENTURA">Aventura</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <div *ngIf="formDetalhes.get('genero')?.touched && formDetalhes.get('genero')?.errors?.['required']"
+        class="error-message">
+        Gênero é obrigatório
+      </div>
 
-  </ion-list>
+      <ion-item disabled="{{edicao}}">
+        <ion-input label="Avaliação:" placeholder="Insira a nota do jogo" formControlName="avaliacao"
+          type="number"></ion-input>
+      </ion-item>
+      <div *ngIf="formDetalhes.get('avaliacao')?.touched && formDetalhes.get('avaliacao')?.errors?.['required']"
+        class="error-message">
+        Avaliação é obrigatória, até uma casa decimal
+      </div>
+      <div *ngIf="formDetalhes.get('avaliacao')?.touched && formDetalhes.get('avaliacao')?.hasError('pattern')"
+        class="error-message">
+        Avaliação entre 0 e 10, até uma casa decimal
+      </div>
 
-  <ion-button expand="block" (click)="editar()" color="success" disabled="{{edicao}}">Salvar</ion-button>
-  <ion-button expand="block" (click)="excluir()" color="danger" disabled="{{edicao}}">Excluir</ion-button>
+      <ion-item disabled="{{edicao}}">
+        <ion-input label="Preço em Reais:" placeholder="Insira o preço do jogo" formControlName="preco"
+          type="number"></ion-input>
+      </ion-item>
+      <div *ngIf="formDetalhes.get('preco')?.touched && formDetalhes.get('preco')?.errors?.['required']"
+        class="error-message">
+        Preço é obrigatório, até duas casas decimais
+      </div>
+      <div *ngIf="formDetalhes.get('preco')?.touched && formDetalhes.get('preco')?.errors?.['min']"
+        class="error-message">
+        Preço com valores positivos
+      </div>
 
+      <ion-item *ngIf="jogo.downloadURL != null">
+        <img src="{{jogo.downloadURL}}" />
+      </ion-item>
+
+      <ion-item disabled="{{edicao}}">
+        <ion-label>Imagem:</ion-label>
+        <ion-button class="addImagem" slot="end">
+          <input type="file" (change)="uploadFile($event.target)" />
+        </ion-button>
+      </ion-item>
+
+    </ion-list>
+
+    <ion-button expand="block" (click)="editar()" color="success" disabled="{{edicao}}">
+      Salvar
+    </ion-button>
+    <ion-button expand="block" (click)="excluir()" color="danger" disabled="{{edicao}}">
+      Excluir
+    </ion-button>
+  </form>
 </ion-content>
