--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -17,7 +17,7 @@
         <strong>{{jogo.nome}}</strong><br />
         <span class="info-jogo">Gênero: {{[jogo.genero]}}</span> <br />
         <span class="info-jogo">Avaliação: {{jogo.avaliacao}}</span><br />
-        <span class="info-jogo">Preço: {{jogo.preco}}</span>
+        <span class="info-jogo">Preço: R$ {{jogo.preco}}</span>
       </ion-label>
     </ion-item>
   </ion-list>
