--- a/src/app/view/welcome/welcome.page.html
+++ b/src/app/view/welcome/welcome.page.html
@@ -7,6 +7,6 @@
     <div class="title-box">
       <h1>GAME LIST</h1>
     </div>
-    <ion-button class="access-button" expand="block" (click)="acessarLista()">Acessar Lista</ion-button>
+    <ion-button class="access-button" expand="block" (click)="acessarLista()">Acessar</ion-button>
   </div>
 </ion-content>
