--- a/src/app/components/empty-screen/empty-screen.component.html
+++ b/src/app/components/empty-screen/empty-screen.component.html
@@ -1,12 +1,12 @@
 <ion-grid>
   <ion-row>
     <ion-col class="ion-text-center">
-      <ion-icon name="sad" style="font-size: 5em; color: #ffffff;"></ion-icon>
+      <ion-icon name="skull-outline"></ion-icon>
     </ion-col>
   </ion-row>
   <ion-row>
     <ion-col class="ion-text-center">
-      <ion-label style="color: #555;">Jogo(s) não encontrado(s)</ion-label> 
+      <ion-label>Jogo(s) não encontrado(s)</ion-label> 
     </ion-col>
   </ion-row>
 </ion-grid>
