--- a/src/app/view/games/home/home.page.scss
+++ b/src/app/view/games/home/home.page.scss
@@ -29,6 +29,10 @@
     color: yellow;
   }
 
+  ion-searchbar {
+    font-family: "Press Start 2P";
+  }
+
   .game-icon {
     font-size: 30px;
   }
