--- a/src/app/view/games/home/home.page.html
+++ b/src/app/view/games/home/home.page.html
@@ -6,12 +6,19 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar #mySearchbar debounce="500" (ionInput)="onSearchChange($event)" placeholder="Pesquisar"></ion-searchbar>
   <app-loading-game *ngIf="isLoading"></app-loading-game>
   <ion-list *ngIf="!isLoading" lines="none">
-    <app-empty-screen *ngIf="lista_jogos.length == 0 && !isLoading"></app-empty-screen>
-    <ion-item-group *ngIf="lista_jogos.length > 0">
+    <!-- Exibe a lista de jogos se houver jogos e a pesquisa não foi realizada -->
+    <ion-item-group *ngIf="!hasSearched && lista_jogos.length > 0">
       <app-games *ngFor="let jogo of lista_jogos" [jogo]="jogo" (editarJogo)="editar($event)"></app-games>
     </ion-item-group>
+    <!-- Exibe a lista de jogos filtrada se houver jogos e a pesquisa foi realizada -->
+    <ion-item-group *ngIf="hasSearched && lista_jogos.length > 0">
+      <app-games *ngFor="let jogo of lista_jogos" [jogo]="jogo" (editarJogo)="editar($event)"></app-games>
+    </ion-item-group>
+    <!-- Exibe o componente empty-screen se não houver jogos e a pesquisa foi realizada ou se a lista está vazia -->
+    <app-empty-screen *ngIf="(hasSearched || !isLoading) && lista_jogos.length == 0"></app-empty-screen>
   </ion-list>
 </ion-content>
 
